--- a/src/composer.json
+++ b/src/composer.json
@@ -20,6 +20,7 @@
         "spatie/laravel-medialibrary": "^8.0.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
