--- a/src/composer.json
+++ b/src/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3",
         "blade-ui-kit/blade-heroicons": "^0.2.2",
+        "davaxi/sparkline": "^1.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
